removed gallery img sizing from index.html, was causing problems with css gallery positioning and sizing! Gallery has been implemented and footer has been fixed from wrapping up into gallery

--- a/how-to-make-a-website/css/main.css
+++ b/how-to-make-a-website/css/main.css
@@ -22,6 +22,9 @@ a {
     text-decoration: none;
 }
 
+img {
+    max-width: 100%;
+}
 
 
 
@@ -69,11 +72,41 @@ FOOTER
 footer {
     font-size: 1.75rem;
     text-align: center;
+    /*
+    clear: both;
+    stops footer social links wrapping round and floating to the right and up into the gallery
+    */
+    clear: both;
     padding-top: 50px;
     color: #ccc;
 }
 
 
+
+/**************************
+PAGE: PORTFOLIO
+**************************/
+
+#gallery {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+#gallery li {
+    float: left;
+    width: 45%;
+    margin: 2.5%;
+    background-color: #f5f5f5;
+    color: #bdc3c7;
+}
+
+#gallery li a p {
+    margin: 0;
+    padding: 5%;
+    font-size: 1.75rem;
+    color: #bdc3c7;
+}
 
 /**************************
 COLORS
